# MapleEngine

./: .gitignore  CMakeLists.txt  gen_build_win.bat
Code/: CMakeLists.txt
Code/Editor/: CMakeLists.txt
Code/Editor/src/: AssetsWindow.cpp  DisplayZeroWindow.cpp  Editor.cpp  Editor.h  EditorWindow.h  HierarchyWindow.cpp  PropertiesWindow.cpp  SceneWindow.cpp
Code/Editor/src/Plugin/: PluginWindow.cpp  PluginWindow.h
Code/Editor/src/UI/: LoadingDialog.cpp  LoadingDialog.h
Code/Maple/: CMakeLists.txt
Code/Maple/lib/charset-detect/: CMakeLists.txt  tellenc.h
Code/Maple/lib/imgui/: CMakeLists.txt
Code/Maple/lib/imgui/src/: ImGuiEnttEditor.hpp  cimgui.cpp  imconfig.h  imgui.h  imgui_impl_glfw.cpp  imgui_widgets.cpp  imgui_widgets_user.h
Code/Maple/lib/ktx/lib/: checkheader.c
Code/Maple/lib/lua/: CMakeLists.txt
Code/Maple/src/: Application.cpp  Application.h  Main.h
Code/Maple/src/Devices/: Input.cpp  Input.h  InputExport.cpp  InputExport.h
Code/Maple/src/Engine/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Core.h  Material.h  Mesh.cpp  Mesh.h  Profiler.h  Quad2D.cpp  Quad2D.h  Terrain.cpp  TextureAtlas.h  TexturePool.cpp  TexturePool.h  Vertex.cpp  Vertex.h
Code/Maple/src/Engine/Interface/: DescriptorSet.cpp  DescriptorSet.h  Pipeline.cpp  RenderPass.cpp  Shader.cpp  Shader.h  SwapChain.h  Texture.h
Code/Maple/src/Engine/Renderer/: DebugRenderer.cpp  DebugRenderer.h  DeferredOffScreenRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  GridRenderer.h  LineRenderer.cpp  LineRenderer.h  OmniShadowRenderer.cpp  OmniShadowRenderer.h  PreProcessRenderer.cpp  PreProcessRenderer.h  RenderDevice.h  RenderManager.cpp  RenderManager.h  RenderParam.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  ShadowRenderer.cpp  ShadowRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  VkRenderDevice.cpp  VkRenderDevice.h
Code/Maple/src/Engine/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSet.h  VulkanHelper.cpp  VulkanPipeline.cpp  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h
Code/Maple/src/Event/: Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.h  WindowEvent.cpp
Code/Maple/src/FileSystem/: File.cpp  File.h  Image.cpp  ImageLoader.cpp  MeshLoader.cpp
Code/Maple/src/ImGui/: ImGuiHelpers.h  ImGuiSystem.cpp  VkImGUIRenderer.cpp
Code/Maple/src/Math/: BoundingBox.cpp  BoundingBox.h  Frustum.h  Ray.h  Rect2D.cpp  Rect2D.h
Code/Maple/src/Others/: Console.cpp  Console.h  LogExport.cpp  StringUtils.cpp  StringUtils.h
Code/Maple/src/Resources/: MeshResource.cpp  MeshResource.h  ShaderResource.h  TextureCache.h
Code/Maple/src/Scene/: Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneManager.cpp  SceneManager.h
Code/Maple/src/Scene/Component/: CameraControllerComponent.h  Component.cpp  Component.h  Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  Sprite.cpp  Sprite.h  Transform.h
Code/Maple/src/Scene/Entity/: Entity.h  EntityGroup.h  EntityManager.h
Code/Maple/src/Scene/System/: ISystem.h  SystemManager.h
Code/Maple/src/Scripts/Lua/: ComponentExport.cpp  ComponentExport.h  LuaComponent.cpp  LuaSystem.cpp  LuaSystem.h  LuaVirtualMachine.h  MathExport.h  MetaFile.cpp  MetaFile.h  ReadMe.md
Code/Maple/src/Scripts/Mono/: MapleMonoArray.cpp  MapleMonoArray.h  MapleMonoAssembly.cpp  MapleMonoAssembly.h  MapleMonoClass.cpp  MapleMonoClass.h  MapleMonoField.cpp  MapleMonoField.h  MapleMonoMethod.cpp  MapleMonoMethod.h  MapleMonoObject.cpp  MapleMonoObject.h  MapleMonoProperty.cpp  MapleMonoProperty.h  Mono.h  MonoComponent.cpp  MonoComponent.h  MonoExporter.cpp  MonoExporter.h  MonoHelper.cpp  MonoHelper.h  MonoScript.cpp  MonoScript.h  MonoScriptInstance.h  MonoSystem.cpp  MonoSystem.h  MonoVirtualMachine.cpp  MonoVirtualMachine.h
Code/Maple/src/Terrain/: QuadCollapseMesh.h  TerrainBuilder.h
Code/Maple/src/Thread/: ThreadPool.cpp  ThreadPool.h
Code/Maple/src/Window/: WindowWin.cpp
Code/Scripts/: CMakeLists.txt  Maple.cs
Code/Scripts/Editor/: EditorWindow.cs
app/Editor/: CMakeLists.txt
app/Editor/src/: AssetsWindow.cpp  AssetsWindow.h  DisplayZeroWindow.cpp  DisplayZeroWindow.h  Editor.cpp  Editor.h  EditorPlugin.h  HierarchyWindow.cpp  PropertiesWindow.cpp  SceneWindow.cpp  SceneWindow.h
app/Maple/: CMakeLists.txt
app/Maple/lib/charset-detect/: tellenc.cpp
app/Maple/lib/ktx/: CMakeLists.txt
app/Maple/lib/zlib/: CMakeLists.txt
app/Maple/src/: Application.cpp  Application.h  Main.h
app/Maple/src/Devices/: Input.cpp  InputExport.cpp  Mouse.h
app/Maple/src/Engine/: Camera.cpp  Camera.h  CameraController.h  Quad2D.cpp  Quad2D.h  QuadTree.h  TextureAtlas.cpp  TextureAtlas.h  Vertex.h
app/Maple/src/Engine/Interface/: BufferLayout.h  CommandBuffer.cpp  Shader.h
app/Maple/src/Engine/Renderer/: DebugRenderer.cpp  DebugRenderer.h  DeferredOffScreenRenderer.cpp  DeferredRenderer.cpp  GridRenderer.cpp  OmniShadowRenderer.h  Renderer2D.cpp  Renderer2D.h  ShadowRenderer.cpp  VkRenderDevice.cpp
app/Maple/src/Engine/Vulkan/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  (+1 more)
app/Maple/src/Event/: WindowEvent.h
app/Maple/src/FileSystem/: File.cpp  File.h  ImageLoader.h  MeshLoader.cpp  MeshLoader.h
app/Maple/src/ImGui/: ImGuiHelpers.cpp  ImGuiManager.cpp  ImGuiSystem.cpp  ImGuiSystem.h  VkImGUIRenderer.cpp  VkImGUIRenderer.h
app/Maple/src/Math/: MathUtils.h  Ray.cpp  Rect2D.cpp  Rect2D.h
app/Maple/src/Others/: Console.cpp  LogExport.cpp  Noise.cpp  Serialization.cpp  Serialization.h  StringUtils.cpp  StringUtils.h  Timer.h
app/Maple/src/Resources/: Resources.h  TextureCache.cpp
app/Maple/src/Scene/: Scene.cpp  Scene.h
app/Maple/src/Scripts/: LuaComponent.cpp  LuaComponent.h  LuaVirtualMachine.cpp  LuaVirtualMachine.h  MathExport.cpp  MetaFile.cpp
app/Maple/src/Thread/: ThreadPool.cpp  ThreadPool.h
app/Maple/src/Window/: NativeWindow.h  WindowWin.cpp  WindowWin.h
(+236 files in other folders)
